docs: sync with current memory model, heapcheck timer, and new .env vars
- ADVANCED/USAGE/WHAT_IS_INSTALLED/TROUBLESHOOTING: JVM tuning now matches
  configureJvm.sh (no -Xms, PZ_XMX_GB override, generational ZGC,
  UseStringDeduplication, preferIPv4Stack, GC log / heap-dump diagnostics).
- Fix zomboid.service doc: MemorySwapMax=0 (not 1G), TimeoutStopSec=120,
  admin-password one-shot, FIFO drain ExecStartPre.
- Document the adaptive pz-heapcheck timer (memory-driven restart) everywhere
  timers are listed (QUICKSTART, USAGE, WHAT_IS_INSTALLED, TROUBLESHOOTING,
  uninstall commands).
- Add missing .env vars: WHITELIST_PURGE_DAYS, HEAP_RESTART_PERCENT/DELAY,
  PZ_XMX_GB, DISCORD_BOT_DEATH_CHANNEL_ID.
- Document the Discord death/PvP watcher.
- Fix reversed 'whitelist add' argument order (SteamID64 first) in USAGE and
  SERVER_CONFIG.
- Fix env var names/paths in WHAT_IS_INSTALLED (SYNC_BACKUPS_DIR, PZ_HOME).
- Replace YOUR_USERNAME install URLs with the real repo; README feature list.